# course-baxter-head-2023-q3

./: CMakeLists.txt  package.xml
scripts/: baxter_head.py  main.py
